<resources>
    <string name="app_name">BillPlease</string>
    <string name="amount">Amount</string>
    <string name="num">Num of Pax</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="svs_disabled">NO SVS</string>
    <string name="svs_enabled">SVS</string>
    <string name="gst_enabled">GST</string>
    <string name="gst_disabled">NO GST</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>